# pixelwise-annotation-tool

./: .gitignore  CMakeLists.txt  README.md
src/: annotate.cpp
